k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-app
spec:
  selector:
    app: python
  ports:
    - protocol: TCP
      port: 80
